# gitlog

./: .gitignore  Gitlog.hs  README.markdown  gitlog.cabal
src/: Gitlog.hs
src/Gitlog/: Encoder.hs  Jira.hs  Parser.hs  Types.hs  Utils.hs
src/Gitlog/Encoder/: Html.hs  Json.hs
tests/: Main.hs
