name:                gitlog
version:             0.1.0.0
synopsis:            Git log parser
-- description:
homepage:            https://github.com/kongo2002/gitlog
license:             Apache-2.0
license-file:        LICENSE
author:              Gregor Uhlenheuer
maintainer:          kongo2002@googlemail.com
copyright:           Copyright © 2014 Gregor Uhlenheuer
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable gitlog
  main-is:             Gitlog.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.6 && < 4.7,
                       process >= 1.1 && < 1.2,
                       bytestring,
                       attoparsec > 0.11 && < 0.13

  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
