name:                gitlog
version:             0.1.0.1
synopsis:            Git log parser
homepage:            https://github.com/kongo2002/gitlog
license:             Apache-2.0
license-file:        LICENSE
author:              Gregor Uhlenheuer
maintainer:          kongo2002@googlemail.com
copyright:           Copyright © 2014 Gregor Uhlenheuer
build-type:          Simple
cabal-version:       >=1.10


executable gitlog
  main-is:             Gitlog.hs
  hs-source-dirs:      src

  build-depends:       base >= 4.6 && < 4.8,
                       bytestring,
                       containers,
                       text,
                       time,
                       transformers,
                       parallel,
                       abstract-par,
                       vector,
                       process > 1.0.0 && <= 1.3,
                       attoparsec > 0.11 && < 0.13,
                       http-conduit >= 2.1.4 && <= 2.2,
                       aeson >= 0.7 && <= 0.9,
                       monad-par >= 0.3.3

  ghc-options:         -O2 -Wall -threaded -rtsopts
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, BangPatterns


test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests, src

  build-depends:       base >= 4.6 && < 4.8,
                       bytestring,
                       containers,
                       text,
                       time,
                       transformers,
                       parallel,
                       abstract-par,
                       vector,
                       process > 1.0.0 && <= 1.3,
                       attoparsec > 0.11 && < 0.13,
                       http-conduit >= 2.1.4 && <= 2.2,
                       aeson >= 0.7 && <= 0.9,
                       monad-par >= 0.3.3,

                       HUnit,
                       test-framework,
                       test-framework-hunit

  ghc-options:         -O2 -Wall -threaded -rtsopts
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
